# ebm

./: .gitignore  .pypirc  CONTRIBUTING.md  MANIFEST.in  README.md  azure-pipelines-1.yml  azure-pipelines-3.yml  azure-pipelines.yml  environment.yml  pyproject.toml  requirements-geodist.txt  requirements.txt  ruff.toml  run_area_forecast.bat  sprint3.ipynb  test.py
com_tests/: test_com_calibration_reader.py
docs/: BUILD.md  README.md  calculate-area-forecast.md  input.md  tekandeler-uten-tilstand.md  update_docs.bat
ebm/: __main__.py  __version__.py  energy_consumption.py  energy_requirements.py  extractors.py  greier.py  heating_system_forecast.py  heating_systems.py  heating_systems_forecast.py  heating_systems_projection.py  holiday_home_energy.py  main.py  s_curve.py  saving.py  sigmoid.py  tekandeler.py  temp_calc.py  validators.py
ebmgeodist/: __main__.py  calculation_tools.py  data_loader.py  enums.py  file_handler.py  geographical_distribution.py  helpers.py  initialize.py  spreadsheet.py
energibruksmodell/: __init__.py  controllers.py  helpers.py
input/: TEK_ID.xlsx  TEK_parameters.csv  TEK_parameters.xlsx  area_parameters.csv  building_categories.csv  building_categories.xlsx  building_conditions.csv  building_conditions.xlsx  building_types.xlsx  construction_building_category_yearly.csv  energy_by_floor_area.csv  energy_requirement_original_condition.csv  energy_requirement_reduction_per_condition.csv  energy_requirement_yearly_improvements.csv  heating_reduction.csv  new_buildings_floor_area.csv  nybygging_befolkning.csv  nybygging_husandeler.csv  nybygging_ssb_05940_areal.csv  renovation_types.xlsx  s_curves.xlsx  scurve_parameters.csv  scurve_parameters.xlsx  temporary_construction_data.xlsx
input_2020/: TEK_ID.csv  TEK_parameters.csv  area_parameters.csv  construction_building_category_yearly.csv
model/: BuildingType.py  Buildings.py  DatabaseManager.py  FileHandler.py  SCurve.py  SCurvePerBuildingType.py  Tek.py  main.py
output/: Kindergarten_acc_s_curves.xlsx  README.md  SmallHouse_acc_s_curves.xlsx  area_house.xlsx
pipelines/: README.md  energibruksmodell-ci-dev.yml  energibruksmodell-push-github-dev.yml  energibruksmodell-push-github-main.yml  energibruksmodell-release-pypi-dev.yml  energibruksmodell-release-pypi-main.yml  template-push-to-github.yml  template-pytest-tasks.yml  template-twine-upload.yml
scripts/: 2632-year-dimensions.py  2768_energy_use_improved.py  add_years_to_input.py  area_dataframes.py  bema_spesifikt_energibehov_to_csv.py  bug_fixing.py  build_and_watch_docs.py  build_docs.py  calibrate.py  compare_heating_systems_energy_use.py  convert_xlsx_to_csv.py  energibehov.py  energy_use_integration.py  example.py  export_construction.py  improved_energy_requirements.py  legg_til_kolonne_fossil_oppvarming.py  load_bema.py  new_transformations_3734.py  pandera2.py  pandera_title.py  print_input_substitutions.py  run_area.py  run_area_construction.py  run_area_refactoring.py  run_area_to_xlsx.py  run_bema_validation.py  run_buidling_conditions.py  run_building_category_share.py  run_construction.py  run_control_area.py  run_energy_req_lighting_reduction.py  run_energy_req_lighting_reduction_2020.py  run_get_area_data.py  run_heating_systems_projection.py  run_kindergarten.py  run_nybygging.py  run_nybygging_draft.py  run_rehab.py  run_scurve.py  (+9 more)
tests/: conftest.py  test_energy_need_filter.py  (+1 more)
(+383 files in other folders)
