[build-system]
requires = ["setuptools"] #>=42
build-backend = "setuptools.build_meta"

[project]
name = "energibruksmodell"
version = "0.8.5"
description = "A project for energy usage modeling"
readme = "README.md"
authors = [
    { name = "Lars Petrusson", email = "lfep@nve.no" },
    { name = "Ketil Nordstad", email = "kenord@nve.no" }
]
requires-python = ">= 3.8"
dependencies = [
    "loguru", 
    "numpy", 
    "openpyxl", 
    "pandas", 
    "python-dotenv", 
    "rich"
]
[project.urls]
Homepage = "https://www.nve.no/"
Documentation = "https://dev.azure.com/NVE-devops/Energibruksmodell/_wiki/wikis"
Repository = "https://NVE-devops@dev.azure.com/NVE-devops/Energibruksmodell/_git/Energibruksmodell"

[tool.setuptools]
packages = ["ebm"]
[project.scripts]
calculate-area-forecast = "ebm.__main__:main"
[tool.setuptools.dynamic]
version = {attr = "ebm.__version__"}
[tool.setuptools.package-data]
mypackage = ["data/*.csv"]