[build-system]
requires = ["setuptools"] #>=42
build-backend = "setuptools.build_meta"

[project]
name = "energibruksmodell"
dynamic = ["version"]
description = "A project for energy usage modeling"
readme = "README.md"
authors = [
    { name = "Lars Petrusson", email = "lfep@nve.no" },
    { name = "Ketil Nordstad", email = "kenord@nve.no" }
]
requires-python = ">= 3.11"
dependencies = [
    "loguru", 
    "numpy", 
    "openpyxl", 
    "pandas", 
    "python-dotenv", 
    "rich",
    "pandera",
    "pywin32 ; platform_system == 'Windows'"
]
[project.optional-dependencies]
test = ["pytest"]
build = ["build"]
dev = ["energibruksmodell[test]", "energibruksmodell[build]"]
docs = ['sphinx', 'sphinx-rtd-theme', 'sphinx-autodoc-typehints', 'numpydoc']
tqdm = ['tqdm', 'XlsxWriter']
[project.urls]
Homepage = "https://www.nve.no/"
Documentation = "https://dev.azure.com/NVE-devops/Energibruksmodell/_wiki/wikis"
Repository = "https://NVE-devops@dev.azure.com/NVE-devops/Energibruksmodell/_git/Energibruksmodell"

[tool.setuptools]
packages = ['ebm', 'ebm.model', 'ebm.services', 'ebm.cmd', 'ebm.data']
include-package-data = true
[project.scripts]
ebm = "ebm.__main__:main"
ebm-calibrate = "ebm.cmd.calibrate_excel_com_io:main"
[tool.setuptools.dynamic]
version = {attr = "ebm.__version__.version"}

[tool.setuptools.package-data]
mypackage = ["*.csv"]
[tool.pytest.ini_options]
pythonpath = "."